<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding">
    <TextView
            android:text="@string/myname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage|textPersonName|text|textEmailAddress"
            android:ems="10"
            android:id="@+id/nickname_edit"
            android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"
            style="@style/NameStyle"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:textAlignment="center"
            android:visibility="gone"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/small_padding"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/avatar_image"
            android:contentDescription="@string/avatar"
            android:layout_marginTop="@dimen/layout_margin"
            app:srcCompat="@mipmap/ic_launcher_round"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bio_scroll">
        <TextView
                android:text="@string/mydesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_text"
                style="@style/NameStyle"
                android:lineSpacingMultiplier="1.2"/>
    </ScrollView>
</LinearLayout>